# nyro

./: .dockerignore  CHANGELOG.md  CHANGELOG_CN.md  Cargo.toml  README.md  README_CN.md
.devcontainer/: devcontainer.json
conf/: nyro.yaml
crates/nyro-core/: Cargo.toml
crates/nyro-core/assets/: providers.json
crates/nyro-core/src/: config.rs  lib.rs
crates/nyro-core/tests/: db_migration_normalizes_protocols.rs  passthrough_fidelity.rs  protocol_conversion.rs  protocol_migration.rs  protocol_registry.rs  provider_protocols.rs  vendor_registry.rs
crates/nyroctl/: Cargo.toml
crates/nyroctl/src/: client.rs  connect.rs  main.rs  output.rs
docker/dev/: Dockerfile
docker/runtime/: Dockerfile  docker-entrypoint.sh
docs/design/: architecture.md  protocol-architecture-hardening.md  route-multi-target.md
docs/design/ir/: CHANGELOG.md
docs/zh_CN/design/: hybrid-mode.md
docs/zh_CN/plugins/: ai-proxy.md  local-logs.md  local-metrics.md
nyro/: nyro.lua
nyro/cli/: generator.lua
nyro/cli/templates/: nginx_conf.lua
nyro/plugin/ai-proxy/: handler.lua
nyro/plugin/local-logs/: api.lua  handler.lua  schema.lua
nyro/plugin/local-metrics/: api.lua  handler.lua
scripts/smoke/: server_smoke.py  storage_backends_smoke.py
src-server/: Cargo.toml
src-server/src/: admin_routes.rs  main.rs  yaml_config.rs
src-tauri/: tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
tests/e2e/proxy/: conftest.py
webui/: package-lock.json  package.json
webui/src/components/: log-detail-dialog.tsx
webui/src/lib/: backend.ts  protocol-id.ts  types.ts
(+138 files in other folders)
